--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,3 +30,22 @@
     font-size: 83px;
     color: #FFF;
 }
+.container{
+    position: relative;
+    width:100%;
+    height:400px;
+}
+.hexagon{
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+}
+.title{
+
+}
+.circuit {
+    position: absolute;
+    width:100%;
+    height:100%;
+}
