--- a/public/css/game.css
+++ b/public/css/game.css
@@ -1,49 +1,82 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+:root {
+    --hexagon-width: 100px;
+}
+
 body {
     background: #2a535e;
 }
-#grid {
+
+
+
+.space {
+    display: inline-block;
     position: relative;
-    width: 60%;
-    margin: 0 auto;
-    padding: 0;
+    width: 84px;
+    height: 180px;
 }
-.clear:after {
-    content: "";
+
+.newline {
     display: block;
-    clear: both;
 }
 
-#grid li {
-    list-style-type: none;
-    position: relative;
-    float: left;
-    width: 27.85714285714286%;
-    padding: 0 0 32.16760145166612% 0;
-    -o-transform: rotate(-60deg) skewY(30deg);
-    -moz-transform: rotate(-60deg) skewY(30deg);
-    -webkit-transform: rotate(-60deg) skewY(30deg);
-    -ms-transform: rotate(-60deg) skewY(30deg);
-    transform: rotate(-60deg) skewY(30deg);
-    background: #b9b031;
-    overflow: hidden;
-    visibility: hidden;
+.grid{
+    height: 190px;
 }
 
-#grid li .hexagon {
+
+.hex4{
+    display: inline-block;
+    width: 53.4px;
+  height: 10px;
+  margin: 0 auto;
+  position: relative;
+  margin-right: 60px;
+  margin-top: 140px;
+  margin-left:60px;
+  
+  
+  
+}
+.h1{
+    top: -110px;
+    left: -24px;
+    width: 100px;
+    height: 173.2px;
+    background-color: #6C6;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #0bf3ad;
-    -o-transform: skewY(-30deg) rotate(60deg);
-    -moz-transform: skewY(-30deg) rotate(60deg);
-    -webkit-transform: skewY(-30deg) rotate(60deg);
-    -ms-transform: skewY(-30deg) rotate(60deg);
-    transform: skewY(-30deg) rotate(60deg);
-    overflow: hidden;
-}
-
-#grid li * {
-    visibility: visible;
-}
+    cursor: pointer;
+    transform: rotate(30deg);
+    
+  }
+  
+  .h2{
+    top: -110px;
+    left: -24px;
+    position: absolute;
+    width: 100px;
+    height: 173.2px;
+    background-color: #6C6;
+    
+    transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    cursor: pointer;
+  }
+  
+  .h3{
+    top: -110px;
+    left: -24px;
+    position: absolute;
+    width: 100px;
+    height: 173.2px;
+    
+    background-color: #6C6;
+    transform: rotate(-30deg);
+    -webkit-transform: rotate(-30deg);
+    cursor: pointer;
+  }
