--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,21 +33,41 @@
 .container{
     position: relative;
     width:100%;
-    height:600px;
+    height:100%;
+    background-image: url("https://g1.dcdn.lt/images/pix/jano-matejkos-paveikslas-zalgirio-musis-83563523.jpg");
 }
 .hexagon{
+}
+.title{
     position:absolute;
-    top:50%;
+    top: calc(50% - 500px);
+    font-family: 'Audiowide', cursive;
+    font-size: 120px;
+}
+.circuit {
+}
+.buter{
+    top: calc(50% - 200px);
+}
+.centring{
+    position:absolute;
     left:50%;
     transform: translate(-50%, -50%);
 }
-.title{
-
+footer{
+    position:fixed;
+    left:0;
+    bottom:0;
+    width:100%;
+    
 }
-.circuit {
-    position: absolute;
-    margin:auto;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
+.info{
+    display:inline-block;
+    height:50px;
+    margin:20px;
+    font-family: 'Audiowide', cursive;
+    font-size:30px;
+}
+.bar{
+    top: calc(50% + 130px);
 }
