--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,20 +34,21 @@
     position: relative;
     width:100%;
     height:100%;
-    background-image: url("https://g1.dcdn.lt/images/pix/jano-matejkos-paveikslas-zalgirio-musis-83563523.jpg");
+    background:url("https://g1.dcdn.lt/images/pix/jano-matejkos-paveikslas-zalgirio-musis-83563523.jpg") no-repeat center center fixed;
+    background-size:cover;
 }
 .hexagon{
 }
 .title{
     position:absolute;
-    top: calc(50% - 500px);
+    top: 100px; 
     font-family: 'Audiowide', cursive;
     font-size: 120px;
 }
 .circuit {
 }
 .buter{
-    top: calc(50% - 200px);
+    top:355px;
 }
 .centring{
     position:absolute;
@@ -69,5 +70,5 @@ footer{
     font-size:30px;
 }
 .bar{
-    top: calc(50% + 130px);
+    top:770px; 
 }
