--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -61,7 +61,8 @@ body {
     position: absolute;
     cursor: pointer;
     transform: rotate(30deg);
-
+    animation-name: hex_anim;
+    animation-duration: 5s;
 }
 
 .h2 {
@@ -75,6 +76,8 @@ body {
     transform: rotate(90deg);
     -webkit-transform: rotate(90deg);
     cursor: pointer;
+    animation-name: hex_anim;
+    animation-duration: 5s;
 }
 
 .h3 {
@@ -88,12 +91,16 @@ body {
     transform: rotate(-30deg);
     -webkit-transform: rotate(-30deg);
     cursor: pointer;
+    animation-name: hex_anim;
+    animation-duration: 5s;
 }
 .square{
     position: absolute;
     width:20px;
     height:20px;
     transform:translate(-50%,0);
+    animation-name: square_anim;
+    animation-duration: 5s;
 }
 .white{
     background:#FFF;
@@ -112,4 +119,28 @@ body {
 }
 .bot{
     top:500px
+}
+
+
+
+
+
+
+
+
+
+@keyframes hex_anim {
+    0%   {background-color:rgb(255, 255, 255); }
+    25%  {background-color:rgb(224, 159, 17); top:100px; left:50px }
+    50%  {background-color:rgb(151, 21, 31);  top:200px;}
+    75%  {background-color:rgb(0, 0, 0); top:100px; right:50px}
+    100% {background-color:red; }
+}
+
+@keyframes square_anim {
+    0%   {background-color:rgb(255, 255, 255); }
+    25%  {background-color:rgb(230, 176, 30); left:200px; top:0px;}
+    50%  {background-color:rgb(128, 17, 44); left:200px; top:200px;}
+    75%  {background-color:rgb(0, 0, 0); left:200px; top:400px;}
+    100% {background-color:red; }
 }
